--- a/style.css
+++ b/style.css
@@ -133,3 +133,7 @@ body .trending-posts-vertical .trending-no {
 body.aft-hide-date-author-in-list .af-double-column.list-style .author-links {
     display: inherit;
 }
+
+.totalpoll-question-content {
+    color: white;
+}
