--- a/style.css
+++ b/style.css
@@ -154,3 +154,24 @@ body.aft-hide-date-author-in-list .af-double-column.list-style .author-links .po
 .secondary-footer {
     text-align: center;
 }
+
+/*Functional Styling*/
+@media (pointer: coarse), (hover: none) {
+    [title] {
+      position: relative;
+      display: inline-flex;
+      justify-content: center;
+    }
+    [title]:focus::after {
+      content: attr(title);
+      position: absolute;
+      top: 90%;
+      color: #000;
+      background-color: #fff;
+      border: 1px solid;
+      width: fit-content;
+      padding: 3px;
+      font-size: 10px;
+    }
+  
+  }
